[project]
name = "atlas-sao"
version = "0.1.0"
dependencies = [
    "atlasapiclient",
    "numpy",
    "pandas",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
markers = [
    "integration: mark tests as requiring the ATLAS API config",
]
